maybe already working

--- a/dotfiles/hypr/binds.conf
+++ b/dotfiles/hypr/binds.conf
@@ -1,5 +1,5 @@
 # ============================================================
-# Formula-Arch - Keybinds (keyboard-first, predictable)
+# Formula-Arch - Keybinds
 # ============================================================
 
 $mod = SUPER
@@ -10,7 +10,6 @@ bind = $mod, Q, killactive
 bind = $mod, M, exit
 bind = $mod, F, fullscreen, 1
 bind = $mod, SPACE, togglefloating
-bind = $mod, P, pseudo
 bind = $mod, J, togglesplit
 
 # Focus
@@ -38,5 +37,5 @@ bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 bind = $mod SHIFT, 5, movetoworkspace, 5
 
-# Screenshots (optional if grim/slurp installed)
+# Screenshot (optional)
 bind = $mod, S, exec, grim -g "$(slurp)" - | wl-copy
