--- a/dotfiles/hypr/rules.conf
+++ b/dotfiles/hypr/rules.conf
@@ -1,5 +1,5 @@
 # ============================================================
-# Formula-Arch - App rules (reduce layout chaos)
+# Formula-Arch - App rules
 # ============================================================
 
 windowrulev2 = float, class:^(pavucontrol)$
