--- a/dotfiles/hypr/binds.conf
+++ b/dotfiles/hypr/binds.conf
@@ -1,41 +1,19 @@
-# ============================================================
-# Formula-Arch - Keybinds
-# ============================================================
-
 $mod = SUPER
-
 bind = $mod, RETURN, exec, kitty
-bind = $mod, D, exec, rofi -show drun
+bind = $mod, D, exec, rofi -show drun -theme ~/.config/rofi/theme.rasi
+bind = $mod SHIFT, D, exec, ~/.config/rofi/scripts/powermenu.sh
+bind = $mod, A, exec, ~/.config/rofi/scripts/racecontrol-ai.sh
 bind = $mod, Q, killactive
-bind = $mod, M, exit
 bind = $mod, F, fullscreen, 1
 bind = $mod, SPACE, togglefloating
-bind = $mod, J, togglesplit
-
-# Focus
-bind = $mod, H, movefocus, l
-bind = $mod, L, movefocus, r
-bind = $mod, K, movefocus, u
-bind = $mod, J, movefocus, d
-
-# Move windows
-bind = $mod SHIFT, H, movewindow, l
-bind = $mod SHIFT, L, movewindow, r
-bind = $mod SHIFT, K, movewindow, u
-bind = $mod SHIFT, J, movewindow, d
-
-# Workspaces
 bind = $mod, 1, workspace, 1
 bind = $mod, 2, workspace, 2
 bind = $mod, 3, workspace, 3
 bind = $mod, 4, workspace, 4
 bind = $mod, 5, workspace, 5
-
 bind = $mod SHIFT, 1, movetoworkspace, 1
 bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
 bind = $mod SHIFT, 4, movetoworkspace, 4
 bind = $mod SHIFT, 5, movetoworkspace, 5
-
-# Screenshot (optional)
 bind = $mod, S, exec, grim -g "$(slurp)" - | wl-copy
