--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -1,7 +1,3 @@
-# ============================================================
-# Formula-Arch - Hyprland main config
-# ============================================================
-
 source = ~/.config/hypr/theme.conf
 source = ~/.config/hypr/binds.conf
 source = ~/.config/hypr/rules.conf
@@ -36,9 +32,7 @@ decoration {
 
 animations {
   enabled = yes
-
   bezier = faEase, 0.2, 0.9, 0.2, 1.0
-
   animation = windows, 1, 5, faEase
   animation = windowsOut, 1, 4, faEase, popin 70%
   animation = border, 1, 5, faEase
@@ -49,17 +43,11 @@ animations {
 input {
   kb_layout = us
   follow_mouse = 1
-  sensitivity = 0
-
-  touchpad {
-    natural_scroll = false
-  }
 }
 
 misc {
   disable_hyprland_logo = true
   disable_splash_rendering = true
-  vrr = 1
 }
 
 dwindle {
@@ -68,6 +56,6 @@ dwindle {
   smart_split = true
 }
 
-master {
-  new_status = master
+xwayland {
+  force_zero_scaling = true
 }
